[gd_scene load_steps=10 format=3 uid="uid://6dl0hdr7ldv6"]

[ext_resource type="Script" uid="uid://dfi1enuvp4pji" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://j0kdbgiu0cqf" path="res://misc/temp_background.PNG" id="2_8ln24"]
[ext_resource type="AudioStream" uid="uid://dmy3d1uuggsew" path="res://sound/diamond_touch_01.wav" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://c6rc70nskjep5" path="res://sound/machine love arr. orchestra, op. 17 no. 3 - estreller.mp3" id="2_wu84c"]
[ext_resource type="AudioStream" uid="uid://vic2a1y24ax2" path="res://sound/diamond_return_01.wav" id="3_wu84c"]
[ext_resource type="PackedScene" uid="uid://b60xax8j2rp1s" path="res://scenes/AudioOptions.tscn" id="4_rtw2f"]
[ext_resource type="AudioStream" uid="uid://ca4fwi266pub1" path="res://sound/shiba sound (1).mp3" id="7_jk1qb"]
[ext_resource type="AudioStream" uid="uid://bovqh28q8bieg" path="res://sound/shiba sound (2).mp3" id="8_5dd4i"]
[ext_resource type="AudioStream" uid="uid://c5rnxc7owbaqc" path="res://sound/shiba sound (3).mp3" id="9_lgwnu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -170.0
offset_right = 664.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.872979, 0.512865, 0.983236, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8ln24")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_left = -556.0
offset_top = -304.0
offset_right = 1986.0
offset_bottom = 1502.0
color = Color(0, 0, 0, 0.756863)

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wu84c")
volume_db = -1.0
autoplay = true
parameters/looping = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Super Racer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit (Don't know what happens on web)"

[node name="AudioOptions" parent="." instance=ExtResource("4_rtw2f")]
visible = false

[node name="ButtonSound_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bqqt6")
volume_db = -8.0

[node name="ButtonSound_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wu84c")
volume_db = -6.0

[node name="ShibaSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jk1qb")
volume_db = 15.0

[node name="ShibaSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5dd4i")
volume_db = 15.0

[node name="ShibaSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_lgwnu")
volume_db = 15.0

[node name="ControlsMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 421.0
offset_right = 537.0
offset_bottom = 652.0
text = "Controls:
WASD for moving
Shift for Drift
Space for Boost
Q for Reverse Camera
1-4 Debug for Timer
Check the Options for Sound because it exist
Escape while in the main game will also bring up the Audio Options"
